netpol2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-workers-to-redis
  namespace: mqtt-demo-dev
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          demo.component: queue-worker
    ports:
    - protocol: TCP
      port: 6379
